# dns_server

./: CMakeLists.txt  README.md  main.c
conf/: dns.conf
dns/message/: CMakeLists.txt  dns_message.c  dns_message.h
dns/message/header/: dns_header.c  dns_header.h
dns/message/question/: dns_question.c  dns_question.h
dns/message/resource_record/: dns_resource_record.c  dns_resource_record.h
dns/server/: server.c  server.h
dns/utils/: hostname.c  hostname.h
